--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-maps": "^1.13.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.1.0",
     "undefined": "react-native-async-storage/async-storage"
   },
   "devDependencies": {
