--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "expo": "^50.0.0",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.11.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-calendars": "^1.1304.1",
@@ -27,7 +29,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "undefined": "react-native-async-storage/async-storage"
+    "undefined": "react-native-firebase/auth"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
